--- a/src/manifest.json
+++ b/src/manifest.json
@@ -32,5 +32,8 @@
                 "script": "closeToTray.js"
             }
         }
-    }
+    },
+    "permissions": [
+        "notifications"
+    ]
 }
