--- a/src/manifest.json
+++ b/src/manifest.json
@@ -20,8 +20,14 @@
         "64": "img/64.png",
         "32": "img/32.png"
     },
+    "permissions": [
+        "storage"
+    ],
     "background": {
         "scripts": ["background.js", "errorHandler.js"]
+    },
+    "options_ui": {
+        "page": "ui/options.html"
     },
     "experiment_apis": {
         "closeToTray": {
